--- a/whatsapp/src/ChatComponent.css
+++ b/whatsapp/src/ChatComponent.css
@@ -2,5 +2,98 @@
 {
     display: flex;
     flex-direction: column;
-    flex : 0.70;
+    flex: 0.65;
 }
+
+.Chat__header{
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid lightgray;
+    padding: 18px;
+}
+
+.Chat__header__info
+{
+    flex: 1;
+    padding-left: 20px;
+}
+
+.Chat__header__info > h3{
+    margin-bottom: 3px;
+    font-weight: 500;
+}
+
+.Chat__header__info > p {
+    color: gray;
+}
+
+.Chat__body{
+    flex: 1;
+    background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
+    background-repeat: repeat;
+    background-position: center;
+    padding: 30px;
+    overflow: scroll;
+}
+.Chat__message
+{
+    position: relative;
+    font-size: 16px;
+    padding: 10px;
+    width: fit-content;
+    border-radius: 10px;
+    background-color: #ffffff;
+    margin-bottom: 30px;
+}
+
+.Chat__name
+{
+    position: absolute;
+    top: -15px;
+    font-weight: 800;
+    font-size: xx-small;
+}
+
+.Chat__timeStamp
+{
+    margin-left: 10px;
+    font-size: xx-small;
+}
+
+.Chat__receiver{
+    margin-left: auto;
+    background-color: #dcf8c6;
+}
+
+.Chat__footer
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 62px;
+    border-top: 1px solid lightgray;
+}
+
+.Chat__footer > form 
+{
+    flex: 1;
+    display: flex;
+}
+
+.Chat__footer > form > input {
+    flex: 1;
+    border-radius: 30px;
+    padding: 10px;
+    border: none;
+}
+
+.Chat__footer > form > button{
+    display: none;
+}
+
+.Chat__footer > .MuiSvgIcon-root
+{
+    padding: 10px;
+    color: gray;
+}
+
